--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     Hellooooooooooooooooooooo!!!
+    <form action="/nonogram" method="get">
+    <input type="range" id="gridSize" name="grid_size" min="5" max="100" value="5">
+        <span id="gridSizeLabel">5 x 5</span> <!-- Display the current value of the slider -->
+        <br>
+    <input type="submit" value="Play">
+    </form>
 </body>
 </html>
