getting the clues to show up on the frontend

--- a/templates/nonogram.html
+++ b/templates/nonogram.html
@@ -2,22 +2,7 @@
 <html>
 <head>
     <title>Nonogram</title>
-    <style>
-        table {
-            border-collapse: collapse;
-            margin: 20px auto;
-        }
-        td {
-            width: 30px;
-            height: 30px;
-            border: 1px solid #000;
-            text-align: center;
-            font-size: 16px;
-        }
-        .black{
-            background-color: #000000;
-        }
-    </style>
+    <link rel="stylesheet" href="static/nonogram.css">
 </head>
 <body>
     <h1>Nonogram Game</h1>
